...
        $0.autocorrectionType = .no
        $0.backgroundColor = .secondarySystemGroupedBackground
        $0.layer.cornerRadius = 16
        $0.layer.masksToBounds = true
        $0.layer.borderColor = UIColor.tertiaryLabel.cgColor
        $0.layer.borderWidth = 1.0
        $0.accessibilityIdentifier = "PROFILE_EDITING__NAME_TEXT_FIELD"
    }

    private lazy var totalUserInfoItemHeaderLabel: HeaderLabel = .init(title: "기본정보")

    private lazy var userInfoItemTableView: IntrinsicHeightTableView = .init(style: .insetGrouped).then {
        $0.delegate = self
...
        $0.baseBackgroundColor = .systemRed
        $0.baseForegroundColor = .white
        $0.title = "계정 삭제하기"
        $0.buttonSize = .medium
    })

    private lazy var editingCompleteButton: UIBarButtonItem = .init(title: "수정완료").then {
        $0.style = .done
    }

    private lazy var backButton: UIBarButtonItem = .init(systemItem: .cancel).then {
        $0.primaryAction = .init(handler: { [weak self] _ in
            let title = "정말로 뒤로 가시겠습니까?"
...
            make.top.equalTo(logoutButton.snp.bottom).offset(20)
            make.bottom.equalToSuperview().inset(20)
        }
    }

    func configureNavigationBar() {
        self.navigationItem.title = "프로필 수정"
        self.navigationItem.rightBarButtonItem = editingCompleteButton
        self.navigationController?.navigationBar.prefersLargeTitles = false
        self.navigationController?.setNavigationBarHidden(false, animated: false)
        self.navigationItem.leftBarButtonItem = backButton
    }

...
