...
        let button = UIButton(type: .system, primaryAction: action)
        button.backgroundColor = .mainColor
        button.setTitle("프로필 수정", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 16, weight: .bold)
        button.setTitleColor(.white, for: .normal)
        button.layer.cornerRadius = 10
        button.accessibilityIdentifier = "HOME__EDIT_PROFILE"
        return button
    }()

    private lazy var userBasicInfoStackView = UIStackView().then {
        $0.axis = .vertical
        $0.distribution = .fillEqually
...
